--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore ~/TTKyApi/TTKyApi.sln
+      run: dotnet restore ~/TTKyApi/TTKyApi/TTKyApi.csproj
     - name: Build
       run: dotnet build --no-restore
     - name: Test
