--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: test current working environment
+      run: echo $GITHUB_WORKSPACE
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
