--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,9 +17,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: test current working environment
-      run: echo $GITHUB_WORKSPACE
-
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
@@ -27,6 +24,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore ${{github.workspace}}/TTKyApi/TTKyApi/TTKyApi.csproj
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build ${{github.workspace}}/TTKyApi/TTKyApi/TTKyApi.csproj --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
