--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Build
       run: dotnet build ${{github.workspace}}/TTKyApi/TTKyApi/TTKyApi.csproj --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test ${{github.workspace}}/TTKyApi/TTKyApi/TTKyApi.csproj --no-build --verbosity normal
